--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BASE_URL=https://otakudesu-unofficial-api.vercel.app/v1/
+VITE_BASE_URL=https://hx-anime-api-git-main-zannmvs-projects.vercel.app/
